--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
     .mobile-select-popup .opt[aria-selected="true"], .mobile-select-popup .opt.selected { font-weight:700; background: rgba(255,255,255,0.03); }
     .mobile-select-popup .opt:hover { background: rgba(255,255,255,0.04); }
 
+    /* Forzamos tamaño más reducido para móviles pequeños (reduce la altura del popup) */
+    @media (max-width:780px) {
+      .mobile-select-popup { max-height: 160px; min-width: 120px; font-size:0.9rem; }
+    }
+    @media (max-width:420px) {
+      .mobile-select-popup { max-height: 120px; min-width: 110px; font-size:0.85rem; padding:0.12rem; }
+      .mobile-select-popup .opt { padding: .18rem .32rem; font-size:0.82rem; }
+    }
+
     @keyframes gradientMove { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
 
     /* compact mobile logic: 2 controls per line, small header */
@@ -1070,6 +1079,173 @@ async function doFireworkThenHide(){
         }
       }
     }, {passive:true});
+
+    /* ----------------------------
+       POPUP MÓVIL PARA SELECTS (reduce la lista en móviles)
+       - Sólo se activa si la pantalla es pequeña (<= 780px).
+       - No toca comportamiento de escritorio.
+       ---------------------------- */
+    (function mobileSelectPopups() {
+      const mobileQ = () => window.matchMedia('(max-width:780px)').matches;
+      const SELECT_IDS = ['genre-select','demographic-select','rating-select'];
+      let activePopup = null;
+      let outsideListener = null;
+      let resizeListener = null;
+      let scrollListener = null;
+      function closePopup() {
+        if (activePopup) {
+          try { activePopup.remove(); } catch(e){}
+          activePopup = null;
+        }
+        if (outsideListener) { document.removeEventListener('pointerdown', outsideListener, true); outsideListener = null; }
+        if (resizeListener) { window.removeEventListener('resize', resizeListener); resizeListener = null; }
+        if (scrollListener) { window.removeEventListener('scroll', scrollListener, true); scrollListener = null; }
+      }
+
+      function createPopupFor(selectEl) {
+        selectEl.addEventListener('pointerdown', function onPointerDown(e){
+          if (!mobileQ()) return; // sólo mobile
+          // Evitamos el menú nativo
+          e.preventDefault();
+          e.stopPropagation();
+          openPopupFor(selectEl);
+        });
+
+        // keyboard: Enter/Space abre popup en móvil
+        selectEl.addEventListener('keydown', (e) => {
+          if (!mobileQ()) return;
+          if (e.key === 'Enter' || e.key === ' ') {
+            e.preventDefault();
+            openPopupFor(selectEl);
+          }
+        });
+      }
+
+      function openPopupFor(selectEl) {
+        closePopup();
+        const rect = selectEl.getBoundingClientRect();
+        const docEl = document.documentElement;
+        const winW = Math.max(docEl.clientWidth || 0, window.innerWidth || 0);
+        const winH = Math.max(docEl.clientHeight || 0, window.innerHeight || 0);
+
+        const popup = document.createElement('div');
+        popup.className = 'mobile-select-popup';
+        popup.setAttribute('role','listbox');
+        popup.setAttribute('aria-label', selectEl.getAttribute('aria-label') || 'Opciones');
+
+        // tamaño lógico y posición: preferimos justo debajo del select,
+        // pero si queda muy cerca del borde inferior, mostramos encima.
+        const pad = 8;
+        const maxHeight = window.matchMedia('(max-width:420px)').matches ? 120 : 160; // consistente con CSS
+        popup.style.maxHeight = maxHeight + 'px';
+
+        // ancho = min(selectWidth, winWidth - 24)
+        const width = Math.min(rect.width, Math.max(120, winW - 24));
+        popup.style.minWidth = Math.max(110, width) + 'px';
+
+        // Calcula top
+        let top = rect.bottom + 6;
+        const estimatedHeight = Math.min(maxHeight, (selectEl.options ? selectEl.options.length * 36 : maxHeight));
+        if (top + estimatedHeight + pad > winH) {
+          // colocamos arriba si no hay espacio
+          top = rect.top - estimatedHeight - 6;
+          if (top < pad) top = pad;
+        }
+        popup.style.left = Math.max(pad, rect.left) + 'px';
+        popup.style.top = Math.max(pad, top) + 'px';
+
+        // Crear opciones
+        const opts = Array.from(selectEl.options);
+        opts.forEach((opt, idx) => {
+          const d = document.createElement('div');
+          d.className = 'opt';
+          d.setAttribute('role','option');
+          d.setAttribute('data-value', opt.value || opt.text);
+          d.setAttribute('tabindex','0');
+          if (opt.selected) d.setAttribute('aria-selected','true');
+          d.textContent = opt.textContent || opt.innerText || opt.value;
+          d.addEventListener('click', (ev) => {
+            ev.stopPropagation();
+            // asignamos valor al select y disparamos change
+            try {
+              selectEl.value = opt.value;
+              const evCh = new Event('change', { bubbles: true });
+              selectEl.dispatchEvent(evCh);
+            } catch(e){}
+            closePopup();
+          });
+          // permitir selección con teclado
+          d.addEventListener('keydown', (ev) => {
+            if (ev.key === 'Enter' || ev.key === ' ') {
+              ev.preventDefault();
+              d.click();
+            } else if (ev.key === 'ArrowDown') {
+              ev.preventDefault();
+              const next = d.nextElementSibling;
+              if (next) next.focus();
+            } else if (ev.key === 'ArrowUp') {
+              ev.preventDefault();
+              const prev = d.previousElementSibling;
+              if (prev) prev.focus();
+            } else if (ev.key === 'Escape') {
+              closePopup();
+              try { selectEl.focus(); } catch(e){}
+            }
+          });
+          popup.appendChild(d);
+        });
+
+        // Append y enfoque en la opción seleccionada si existe
+        document.body.appendChild(popup);
+        activePopup = popup;
+        // focus a option seleccionada o al primero
+        const selected = popup.querySelector('.opt[aria-selected="true"]') || popup.querySelector('.opt');
+        if (selected) { selected.focus(); popup.scrollTop = Math.max(0, selected.offsetTop - 8); }
+
+        // cerrar si click fuera
+        outsideListener = function outsideHandler(ev){
+          if (!activePopup) return;
+          if (ev.target === selectEl || activePopup.contains(ev.target)) return;
+          closePopup();
+        };
+        document.addEventListener('pointerdown', outsideListener, true);
+
+        // cerrar en resize o scroll
+        resizeListener = () => closePopup();
+        window.addEventListener('resize', resizeListener);
+        scrollListener = () => closePopup();
+        window.addEventListener('scroll', scrollListener, true);
+      }
+
+      // Inicialización: crear popup behaviour sólo si existan selects
+      function init() {
+        try {
+          SELECT_IDS.forEach(id => {
+            const el = document.getElementById(id);
+            if (el) createPopupFor(el);
+          });
+        } catch(e) {
+          console.warn('mobileSelectPopups init error', e);
+        }
+      }
+
+      // Reinit en cambio de tamaño para soportar cuando se redimensiona entre mobile/desktop
+      window.addEventListener('resize', function(){
+        // cerramos cualquier popup abierto si cambiaron las reglas
+        if (!mobileQ()) closePopup();
+      }, { passive:true });
+
+      // ejecuto al cargar DOM
+      if (document.readyState === 'loading') document.addEventListener('DOMContentLoaded', init);
+      else init();
+
+      // API para cerrar desde fuera si hace falta
+      window._closeMobileSelectPopup = closePopup;
+    })();
+
+    /* ----------------------------
+       Resto de código (chroma, init etc.)
+       ---------------------------- */
 
     function init(){
       fgContainer.style.display = 'none'; fgCanvas.style.display = 'none'; fgVideo.style.display = 'none';
