--- a/anime-detail.html
+++ b/anime-detail.html
@@ -3950,7 +3950,27 @@
           }
         ]
       },
-
+      68: {
+        title: "It - Bienvenidos a Derry",
+        desc: "En 1962, una pareja con su hijo se muda a Derry, Maine, justo cuando un niño desaparece. Con su llegada, comienzan a suceder cosas malas en el pueblo.",
+        cover: "it.avif",
+        seasons: [
+          {
+            num: 1,
+            cover: "it1.avif",
+            eps: [
+              { title: "Episodio 1"},
+              { title: "Episodio 2"},
+              { title: "Episodio 3"},
+              { title: "Episodio 4"},
+              { title: "Episodio 5"},
+              { title: "Episodio 6"},
+              { title: "Episodio 7"},
+              { title: "Episodio 8"},
+            ]
+          }
+        ]
+      },
 
 
 
