--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
         <option>Superhéroes</option>
         <option>Survival</option>
         <option>Survival Game</option>
+        <option>Suspenso</option>
         <option>Tentáculos</option>
         <option>Terror</option>
         <option>Terror psicológico</option>
@@ -410,6 +411,7 @@
       {id:65, title:"Classroom of the Elite", aliases: ["Yōkoso Jitsuryoku Shijō Shugi no Kyōshitsu e"], img:"classroomelite.avif", rating:4.8, genres:["Drama","Slice of Life","Survival Game","Thriller","Thriller psicológico","Escolar","Seinen"]},
       {id:66, title:"Frieren", aliases: ["Sōsō no Frieren"], img:"ff.avif", rating:4.9, genres:["Fantasía","Aventura","Drama","Shōnen"]},
       {id:67, title:"Solo leveling", aliases: ["Ore dake Level Up na Ken"], img:"sololeveling.avif", rating:4.9, genres:["Fantasía","Aventura","Acción","GameLit/LitRPG","RPG","Superhéroes","Isekai","Nekketsu","Shōnen"]},
+      {id:68, title:"It - Bienvenidos a Derry", aliases: ["It - Welcome to Derry"], img:"it.avif", rating:4.9, genres:["Terror","Sobrenatural","Suspenso","Drama","Thriller","Seijin"]},
     ];
 
     /* ----------------------------
