--- a/video-player.html
+++ b/video-player.html
@@ -2779,11 +2779,11 @@
         "1": {
           "1": { link:'https://drive.google.com/file/d/1831tHql76bHG9B8EAY49WksXu0InK6ID/preview', title:'Solo Leveling T1 Cap 1' },
           "2": { link:'https://drive.google.com/file/d/14kygr2Gv4-PDGBcTleOWZyUYX_eC8Ph4/preview', title:'Solo Leveling T1 Cap 2' },
-          "3": { link:'https://drive.google.com/file/d/1FF5z8ZmxiusDa_6Mtbh0r_DKsr4fyYPP/preview', title:'Solo Leveling T1 Cap 3' },
+          "3": { link:'https://drive.google.com/file/d/1ZggR2UvLbxH2kCAYAetGePlwDq-1qixj/preview', title:'Solo Leveling T1 Cap 3' },
           "4": { link:'https://drive.google.com/file/d/1RK_8XGfV-019m3iioEWl0jZC3RtJYhiU/preview', title:'Solo Leveling T1 Cap 4' },
-          "5": { link:'preview', title:'Solo Leveling T1 Cap 5' },
-          "6": { link:'preview', title:'Solo Leveling T1 Cap 6' },
-          "7": { link:'preview', title:'Solo Leveling T1 Cap 7' },
+          "5": { link:'https://drive.google.com/file/d/1B_pomfkP_iMINhjsC2f_mcS71RfRlmrK/preview', title:'Solo Leveling T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1_R3-c_aqYODKxMxR4dyw8VOe5YM2Flpx/preview', title:'Solo Leveling T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1BOfrrdn3COl1alHEeDiZKiTTlIJbD8hk/preview', title:'Solo Leveling T1 Cap 7' },
           "8": { link:'https://drive.google.com/file/d/1SARlMg6h9QxI_E1RlspdluQ2mfNwcu8s/preview', title:'Solo Leveling T1 Cap 8' },
           "9": { link:'https://drive.google.com/file/d/1-T2UY7wHPFQAt7Gz4Hkvb7aTB2kyCXMA/preview', title:'Solo Leveling T1 Cap 9' },
           "10": { link:'https://drive.google.com/file/d/16iwobqoYldND2yZdrStLuymUS8CvI_fr/preview', title:'Solo Leveling T1 Cap 10' },
@@ -2792,20 +2792,37 @@
         },
         "2": {
           "1": { link:'https://drive.google.com/file/d/1NtGKNuwnvmYZIafzwbseqTAiMsKu2qug/preview', title:'Solo Leveling T1 Cap 1' },
-          "2": { link:'https://drive.google.com/file/d/1RtOrnoChz92X6M4cg0f-paIvNcolK4o8/preview', title:'Solo Leveling T1 Cap 2' },
-          "3": { link:'https://drive.google.com/file/d/1dBwZAvwILYfNblcx9UlzJyAWiL94lqJ5/preview', title:'Solo Leveling T1 Cap 3' },
+          "2": { link:'https://drive.google.com/file/d/18x7JD_5n-DBDMFfWAlzHkGWKRalQMi7p/preview', title:'Solo Leveling T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1Zs22yqy2P1K-weH3ZyK9QAlT1FXu9XtV/preview', title:'Solo Leveling T1 Cap 3' },
           "4": { link:'https://drive.google.com/file/d/15b9arlpzRlltbBC09zvSEPilPxIpxPVM/preview', title:'Solo Leveling T1 Cap 4' },
           "5": { link:'https://drive.google.com/file/d/1wCiVa0-XsX8nvqMvPYhO6uyNdLAo7zMl/preview', title:'Solo Leveling T1 Cap 5' },
-          "6": { link:'https://drive.google.com/file/d/1kLFi4sZ_LbdxBp9RKjcYfyZTd1GGpGtk/preview', title:'Solo Leveling T1 Cap 6' },
+          "6": { link:'https://drive.google.com/file/d/1YO5MwjFZemos-CehaUaGIXzJG7N64BIV/preview', title:'Solo Leveling T1 Cap 6' },
           "7": { link:'https://drive.google.com/file/d/1OphXlnf-SoXjMQ1_iXyKvL8vsxk5H9Xk/preview', title:'Solo Leveling T1 Cap 7' },
-          "8": { link:'https://drive.google.com/file/d/1rdVK8EJuWIOEsYld73_CaBeAszRnmQ8-/preview', title:'Solo Leveling T1 Cap 8' },
+          "8": { link:'https://drive.google.com/file/d/1hnq3gDqz8aCyfPa8o5dV_kOs-MSvBrlT/preview', title:'Solo Leveling T1 Cap 8' },
           "9": { link:'https://drive.google.com/file/d/1S8uLRmrO2spTFFuL4tcKgYGxIcS2KT6C/preview', title:'Solo Leveling T1 Cap 9' },
           "10": { link:'https://drive.google.com/file/d/1kNXcHYBMDy4cnvJKRlahpDZ6G1qLAUq7/preview', title:'Solo Leveling T1 Cap 10' },
           "11": { link:'https://drive.google.com/file/d/1zvYTFwzdsAkQbI8x5LaBTc1vQX22WyVw/preview', title:'Solo Leveling T1 Cap 11' },
-          "12": { link:'https://drive.google.com/file/d/1DBSWdAGsils0s9U2idNQaUCXpfxjpfNa/preview', title:'Solo Leveling T1 Cap 12' },
-          "13": { link:'https://drive.google.com/file/d/1ZwQbE7Smw0dyFvzyDpaXPSA3GSMzVSiS/preview', title:'Solo Leveling T1 Cap 13' },
+          "12": { link:'https://drive.google.com/file/d/1mvbPkuXMQwo94hxZFeIPymTJiTagTDmQ/preview', title:'Solo Leveling T1 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1d6l0YJOHI3KRcdxp9JiJa7xYOfb6xVDy/preview', title:'Solo Leveling T1 Cap 13' },
         }
       },
+      "68": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/1c-f9LqX0yr0pzTf_UdE5_TXtnwfC5ssB/preview', title:'It - Bienvenidos a Derry T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/15RYzFhZFhvtaiovvRUfoA-eeec3N8sHK/preview', title:'It - Bienvenidos a Derry T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1VStC7Y65xYkFoIkGPhGOTMuuyswFn1d2/preview', title:'It - Bienvenidos a Derry T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1YjENQcOxYIsWp5trnfUEIhEerLjLWsMJ/preview', title:'It - Bienvenidos a Derry T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1ofRdCfhReg7cVzg1T9Mw6riX9KlDpuP0/preview', title:'It - Bienvenidos a Derry T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1eyUQ3lQS8oVOgKdUgVeZJP7ETb1uP4n8/preview', title:'It - Bienvenidos a Derry T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1x245zGfkS59RoHqPtCnXCnOfEpvro9ss/preview', title:'It - Bienvenidos a Derry T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1B7coVAg2KnIluw7Dj53PQC3-hWiCvq_v/preview', title:'It - Bienvenidos a Derry T1 Cap 8' },
+        }
+      },
+
+
+
+
+
 
 
 
